// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`termost > should display \`help\` > long flag 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/default[39m […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Program description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m-f, --flag        [39m A super useful CLI flag"
`;

exports[`termost > should display \`help\` > short flag 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/default[39m […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Program description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m-f, --flag        [39m A super useful CLI flag"
`;

exports[`termost > should display \`version\` > long flag 1`] = `"0.0.0"`;

exports[`termost > should display \`version\` > short flag 1`] = `"0.0.0"`;

exports[`termost > should handle \`command\` api > build help output 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/command build[39m […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Transpile and bundle in production mode
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m--global          [39m Shared flag between commands
  [32m--local           [39m Local command flag"
`;

exports[`termost > should handle \`command\` api > build output 1`] = `
"[90m┌[39m  @examples/command [2mv0.0.0[22m
[90m│[39m
[34m●[39m  [2m[command:build][22m 👋 Hello, I'm the build command
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Shared global flag = false
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": false
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Local command flag = local-value
[90m│[39m
[90m│[39m  {
[90m│[39m    "localFlag": "local-value"
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Context value = {"globalFlag":false,"localFlag":"local-value"}
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": false,
[90m│[39m    "localFlag": "local-value"
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Argv value = {"command":"build","operands":[],"options":{}}
[90m│[39m
[90m│[39m  {
[90m│[39m    "command": "build",
[90m│[39m    "operands": [],
[90m│[39m    "options": {}
[90m│[39m  }
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;

exports[`termost > should handle \`command\` api > build shared flag output 1`] = `
"[90m┌[39m  @examples/command [2mv0.0.0[22m
[90m│[39m
[34m●[39m  [2m[command:build][22m 👋 Hello, I'm the build command
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Shared global flag = true
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": true
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Local command flag = hello
[90m│[39m
[90m│[39m  {
[90m│[39m    "localFlag": "hello"
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Context value = {"globalFlag":true,"localFlag":"hello"}
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": true,
[90m│[39m    "localFlag": "hello"
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:build][22m 👉 Argv value = {"command":"build","operands":[],"options":{"global":true,"local":"hello"}}
[90m│[39m
[90m│[39m  {
[90m│[39m    "command": "build",
[90m│[39m    "operands": [],
[90m│[39m    "options": {
[90m│[39m      "global": true,
[90m│[39m      "local": "hello"
[90m│[39m    }
[90m│[39m  }
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;

exports[`termost > should handle \`command\` api > help output 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/command[39m <command> […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Example to showcase the \`command\` API
[1m[4m[33m
COMMANDS:[39m[24m[22m
  [32mbuild             [39m Transpile and bundle in production mode
  [32mwatch             [39m Rebuild your assets on any code change
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m--global          [39m Shared flag between commands"
`;

exports[`termost > should handle \`command\` api > help output with empty command 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/command[39m <command> […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Example to showcase the \`command\` API
[1m[4m[33m
COMMANDS:[39m[24m[22m
  [32mbuild             [39m Transpile and bundle in production mode
  [32mwatch             [39m Rebuild your assets on any code change
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m--global          [39m Shared flag between commands"
`;

exports[`termost > should handle \`command\` api > watch help output 1`] = `
"[1m[4m[33m
USAGE:[39m[24m[22m
[32m@examples/command watch[39m […options]
[1m[4m[33m
DESCRIPTION:[39m[24m[22m
Rebuild your assets on any code change
[1m[4m[33m
OPTIONS:[39m[24m[22m
  [32m-h, --help        [39m Display the help center
  [32m-v, --version     [39m Print the version
  [32m--global          [39m Shared flag between commands"
`;

exports[`termost > should handle \`command\` api > watch output 1`] = `
"[90m┌[39m  @examples/command [2mv0.0.0[22m
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👋 Hello, I'm the watch command
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Shared global flag = false
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": false
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Context value = {"globalFlag":false}
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": false
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Argv value = {"command":"watch","operands":[],"options":{}}
[90m│[39m
[90m│[39m  {
[90m│[39m    "command": "watch",
[90m│[39m    "operands": [],
[90m│[39m    "options": {}
[90m│[39m  }
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;

exports[`termost > should handle \`command\` api > watch shared flag output 1`] = `
"[90m┌[39m  @examples/command [2mv0.0.0[22m
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👋 Hello, I'm the watch command
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Shared global flag = true
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": true
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Context value = {"globalFlag":true}
[90m│[39m
[90m│[39m  {
[90m│[39m    "globalFlag": true
[90m│[39m  }
[90m│[39m
[34m●[39m  [2m[command:watch][22m 👉 Argv value = {"command":"watch","operands":[],"options":{"global":true}}
[90m│[39m
[90m│[39m  {
[90m│[39m    "command": "watch",
[90m│[39m    "operands": [],
[90m│[39m    "options": {
[90m│[39m      "global": true
[90m│[39m    }
[90m│[39m  }
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;

exports[`termost > should handle \`option\` api 1`] = `
"[90m┌[39m  @examples/option [2mv0.0.0[22m
[90m│[39m
[34m●[39m  [2m[option][22m {
[90m│[39m    "optionWithAlias": 0,
[90m│[39m    "optionWithoutAlias": "defaultValue"
[90m│[39m  }
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;

exports[`termost > should handle \`task\` api 1`] = `
"[90m┌[39m  @examples/task [2mv0.0.0[22m
[?25l[90m│[39m
[32m◇[39m  Task with returned value (persisted)
[?25h[?25l[90m│[39m
[35m◒[39m  Task with side-effect only (no persisted value)...
[1G[J[32m◇[39m  Task with side-effect only (no persisted value)
[?25h[?25l[90m│[39m
[32m◇[39m  Task can also access other persisted task values
[?25h[?25l[90m│[39m
[32m◇[39m  Or even execute external commands thanks to its provided helpers
[?25h[?25l[90m│[39m
[32m◇[39m  A task can have a dynamic label generated from contextual values: small
[?25h[90m│[39m
[34m●[39m  [2m[task][22m If you don't specify a label, the handler is executed in "live mode" (the output is not hidden by the label and is displayed gradually).
[90m│[39m
[34m●[39m  [2m[task][22m A task with a specified "key" can be retrieved here. Size = 45. If no "key" was specified the task returned value cannot be persisted across program instructions.
[90m│[39m
[2m◆[22m  [2m[task][22m The logger helper can be used to display task content in a nice way
[90m│[39m
[34m●[39m  [2m[task][22m The logger helper can be used to display task content in a nice way
[90m│[39m
[33m▲[39m  [2m[task][22m The logger helper can be used to display task content in a nice way
[90m│[39m
[31m■[39m  [2m[task][22m The logger helper can be used to display task content in a nice way
[90m│[39m
[32m◆[39m  [2m[task][22m The logger helper can be used to display task content in a nice way
[90m│[39m
[34m●[39m  [2m[task][22m 👋 You can also namespace the logger name
[36m
You can also have a total control on the formatting through \`styleText\` from \`node:util\`.
{
  "size": 45,
  "computedFromOtherTaskValues": "small",
  "execOutput": "Hello from shell"
}[39m
[90m│[39m
[90m└[39m  [2mDone in <duration>[22m"
`;
